# Jack_Lambda

./: #*intero:Proyecto1:Proyecto1:repl*#  *intero:Proyecto1:Proyecto1:repl*  .#*intero:Proyecto1:Proyecto1:repl*  Proyecto1.cabal  Proyecto1.cabal~  README.md  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/604dec07/: cabal_macros.h
.stack-work/ghci/e0e2cd6d/: cabal_macros.h
.stack-work/ghci/fe739c18/: cabal_macros.h
.stack-work/intero/: intero0bTSqI-STAGING.hs  intero57JfhV-STAGING.hs  intero88cyhv-STAGING.hs  interoBhhoU3-STAGING.hs  interoD2E8yj-STAGING.hs  interoGCBGkf-STAGING.hs  interoJgywHd-STAGING.hs  interoLgAipv-STAGING.hs  interoOrycie-STAGING.hs  interoR8ECnb-STAGING.hs  interoTeBSc5-STAGING.hs  interoXHPDmj-STAGING.hs  interoeau7EB-STAGING.hs  interohkcOof-STAGING.hs  interolTE6A5-STAGING.hs  interolfd6jg-STAGING.hs  interoteK364-STAGING.hs  interouItfoo-STAGING.hs  interowM4k4Q-STAGING.hs  interox4Naag-STAGING.hs
src/: #DataTypes.hs#  #JackLambda.hs#  DataTypes.hs  DataTypes.hs~  JackLambda.hs  JackLambda.hs~  Main.hs
