name:                Proyecto1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Proyecto1#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Pinto
maintainer:          example@example.com
copyright:           2020 Daniel Pinto
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Proyecto1
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random >=1.2